// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`B3 when asked to render  renders 1`] = `
<p
  className="text-base"
>
  Hello world!
</p>
`;

exports[`B3 when asked to render with additional class  renders with additional class 1`] = `
<p
  className="text-base some-class"
>
  Hello world!
</p>
`;
